name:                agitpunkt
version:             0.1.0.0
synopsis: 
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable agitpunkt
  ghc-options:     -Wall -Werror -fllvm -O3 -dynamic
  main-is:           main.hs
  other-modules:     Handler.Article
                   , App.Handler
                   , App.Component
                   , App.Route
                   , App.Launcher
                   , App.Session
                   , Models.Article
                   , Models.User
                   , Models.Image
                   , Models.Category
                   , Handler.Base
                   , Handler.Auth
                   , Handler.Icons
                   , Handler.Image
                   , Handler.Application
                   , Config
  build-depends:     agitpunkt
                   , base
                   , containers
                   , template-haskell
                   , time
                   , bson
                   , mtl
                   , text
-- TODO: move down
                   , directory
                   , JuicyPixels
                   , network
-- TODO: deprecate
                   , mongoDB                   
  hs-source-dirs:    app
  default-language:  Haskell2010

test-suite spec
  ghc-options:       -fllvm -ddump-deriv
  hs-source-dirs:    spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     agitpunkt
                   , hspec
                   , base
                   , containers
                   , attoparsec
                   , utf8-string
                   , template-haskell
  other-modules:     Misc.TextUtilSpec
                   , Misc.JsonSpec
                   , Misc.MarkdownSpec
                   , Misc.HtmlSpec
                   , Core.ModelSpec
                   , Core.Request.ContentSpec
                   , SpecHelper
  default-language:  Haskell2010

library
  ghc-options:     -Wall -Werror -fllvm -O3 -auto-all
  exposed-modules:   Core.Request
                   , Core.Request.Content
                   , Core.Request.ContentDisposition
                   , Core.Response
                   , Core.Http
                   , Core.Database
                   , Core.Model
                   , Misc.Daemon
                   , Misc.File
                   , Misc.TextUtil
                   , Misc.Html
                   , Misc.Markdown
                   , Misc.Crypto
                   , Misc.Json
                   , Misc.Parser
                   , Misc.Html.Meta
                   , Misc.Html.Node
  build-depends:     base
                   , attoparsec
                   , SHA
                   , containers
                   , mtl
                   , utf8-string
                   , http-types
                   , time
                   , template-haskell
                   , network
                   , unix
                   , directory
                   , text
-- TODO: deprecate
                   , mongoDB
                   , monad-control
                   , wreq
                   , lens
  hs-source-dirs:    src
  default-language:  Haskell2010

