name:                manicure
version:             0.1.0.0
synopsis:            
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Manicure.Request,
                     Manicure.Response,
                     Manicure.Route,
                     Manicure.Http,
                     Manicure.Html,
                     Manicure.Database,
                     Manicure.Session,
                     Models.Article,
                     Handler.Main
  build-depends:     base,
                     network,
                     bytestring,
                     http-types,
                     unix,
                     template-haskell,
                     monad-control,
                     parsec,
                     mtl,
                     text,
                     transformers,
                     containers,
                     time,
                     mongoDB,
                     bson,
                     hedis,
                     cryptohash
  hs-source-dirs:    src
executable manicure
  main-is:           main.hs
  build-depends:     manicure,
                     base,
                     network,
                     bytestring,
                     http-types,
                     unix,
                     template-haskell,
                     monad-control,
                     parsec,
                     mtl,
                     text,
                     transformers,
                     containers,
                     time,
                     mongoDB,
                     bson,
                     hedis,
                     cryptohash
  hs-source-dirs:    src
  default-language:  Haskell2010
