name:                manicure
version:             0.1.0.0
synopsis:            
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite spec
  ghc-options:       -fllvm
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:     base,
                     bytestring,
                     manicure,
                     hspec,
                     containers,
                     attoparsec
  default-language:  Haskell2010
library
  ghc-options:       -fllvm
  exposed-modules:   Manicure.Request,
                     Manicure.Response,
                     Manicure.Route,
                     Manicure.Http,
                     Manicure.Html,
                     Manicure.Database,
                     Manicure.Session,
                     Manicure.ByteString,
                     Manicure.Auth,
                     Manicure.Json,
                     Manicure.Handler,
                     Models.Article,
                     Models.User
                     Handler.Main
                     Handler.Exception
  build-depends:     base,
                     network,
                     bytestring,
                     utf8-string,
                     http-types,
                     unix,
                     template-haskell,
                     monad-control,
                     parsec,
                     attoparsec,
                     mtl,
                     text,
                     transformers,
                     containers,
                     time,
                     mongoDB,
                     bson,
                     hedis,
                     cryptohash,
                     wreq,
                     lens,
                     old-locale
  hs-source-dirs:    src
  default-language:  Haskell2010
executable manicure
  ghc-options:       -fllvm
  main-is:           main.hs
  build-depends:     manicure,
                     base,
                     network,
                     bytestring,
                     parsec,
                     cryptohash
  hs-source-dirs:    app
  default-language:  Haskell2010

