name:                agitpunkt-app
version:             0.1.0.0
synopsis: 
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable agitpunkt
  ghc-options:     -Wall -fllvm -dynamic
  main-is:           main.hs
  other-modules:     Handler.Article
                   , App.Handler
                   , App.Component
                   , App.Route
                   , App.Launcher
                   , App.Session
                   , Models.Article
                   , Models.User
                   , Models.Image
                   , Models.Category
                   , Handler.Base
                   , Handler.Auth
                   , Handler.Icons
                   , Handler.Image
                   , Handler.Application
                   , Config
  build-depends:     agitpunkt-core
                   , agitpunkt-misc
                   , base
                   , containers
                   , bytestring
                   , template-haskell
                   , time
                   , bson
                   , mtl
                   , text
                   , directory
                   , JuicyPixels
                   , network
                   , mongoDB                   
  default-language:  Haskell2010
