name:                agitpunkt-core
version:             0.1.0.0
synopsis: 
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite spec
  ghc-options:       -fllvm -ddump-deriv
  hs-source-dirs:    spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     agitpunkt-core
                   , agitpunkt-misc
                   , hspec
                   , base
                   , containers
                   , attoparsec
                   , text
                   , bytestring
                   , template-haskell
  other-modules:     Core.ModelSpec
                   , Core.Request.ContentSpec
                   , Core.Request.ContentDispositionSpec
                   , SpecHelper
  default-language:  Haskell2010

library
  ghc-options:     -Wall -fllvm -auto-all
  exposed-modules:   Core.Request
                   , Core.Request.Content
                   , Core.Request.ContentDisposition
                   , Core.Response
                   , Core.Http
                   , Core.Database
                   , Core.Model
  build-depends:     agitpunkt-misc
                   , base
                   , attoparsec
                   , SHA
                   , bytestring
                   , containers
                   , mtl
                   , utf8-string
                   , http-types
                   , time
                   , template-haskell
                   , network
                   , unix
                   , directory
                   , text
-- TODO: deprecate
                   , mongoDB
                   , monad-control
                   , wreq
                   , lens
  default-language:  Haskell2010

