name:                agitpunkt-misc
version:             0.1.0.0
synopsis: 
license:             AGPL-3
license-file:        LICENSE
author:              inkyu lee
maintainer:          gofiri@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

test-suite spec
  ghc-options:       -fllvm -ddump-deriv
  hs-source-dirs:    spec
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  build-depends:     agitpunkt-misc
                   , hspec
                   , base
                   , containers
                   , attoparsec
                   , text
                   , bytestring
                   , template-haskell
  other-modules:     Misc.TextUtilSpec
                   , Misc.JsonSpec
                   , Misc.MarkdownSpec
                   , Misc.HtmlSpec
                   , Misc.StringUtilSpec
                   , SpecHelper
  default-language:  Haskell2010

library
  ghc-options:     -Wall -fllvm -auto-all
  exposed-modules:   Misc.Daemon
                   , Misc.StringUtil
                   , Misc.File
                   , Misc.TextUtil
                   , Misc.Html
                   , Misc.Markdown
                   , Misc.Crypto
                   , Misc.Json
                   , Misc.Parser
                   , Misc.Parser.ByteString
                   , Misc.Parser.LazyByteString
                   , Misc.Html.Meta
                   , Misc.Html.Node
  build-depends:     base
                   , attoparsec
                   , SHA
                   , bytestring
                   , containers
                   , mtl
                   , utf8-string
                   , http-types
                   , time
                   , template-haskell
                   , network
                   , unix
                   , directory
                   , text
-- TODO: deprecate
                   , mongoDB
                   , monad-control
                   , wreq
                   , lens
  default-language:  Haskell2010

